--- a/states/es6/es6.html
+++ b/states/es6/es6.html
@@ -41,7 +41,9 @@ the spread allows us to take an arbitrary number of params!
   console.log(joinUp('I', 'really', 'am', 'digging', 'es6!'));
 
   //I really am digging es6!
-</pre>
+</pre><br /><br />
+
+
 </div>
 <hr>
 <div class="framed5"><h2 class="chtitle ivr thin">Default Parameters</h2>
