--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -5,7 +5,7 @@
     <!--
     <h2 class="date">Thursday Aug 31st, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br>
-    <h3 class="subtitle"> Back from a hiatus. Ran into some issues with pg.connect not working because of the 7.0 update. Serious problem and unresolved. --Swearing alot these days. Working on Dan Wellman's es6 training & it's excellent.</h3>
+    <h3 class="subtitle"> placeholder</h3>
     <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">Typical JavaScript interview exercises (explained)<br>{ author: <a href="https://twitter.com/_maxpou">@_maxpou</a> }<a href="https://t.co/k7oSKL3QFM">https://t.co/k7oSKL3QFM</a></p>&mdash; The Practical Dev (@ThePracticalDev) <a href="https://twitter.com/ThePracticalDev/status/900795596180684802">August 24, 2017</a></blockquote>
 
     <br>
@@ -21,6 +21,28 @@
     </ol>
     <hr />
   -->
+
+  <h2 class="date">Wednesday September 20th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Two weeks of no updates. Sorry! I got a job, learned Scratch, culled entire library of training (277Gigs), worked on ES6 objects, Doug Crockford's <a target="_blank" href="http://www.crockford.com/javascript/private.html"> on private vars in Objects</a>, Jake Archibald's article on <a href="https://developers.google.com/web/fundamentals/getting-started/primers/promises" target="_blank">Promises....</a> --Lots & lots of work done and lots of RL tasks have gotten in the way.<br />
+  <br />
+  Good News! I signed with "Happy Code Club" and have been teaching and building a javascript curriculum based on <a target="_blank" href="http://woofjs.com/">woof.js</a></h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">70 <a href="https://twitter.com/hashtag/jQuery?src=hash">#jQuery</a> Interview Questions to Ace Your Next <a href="https://twitter.com/hashtag/Interview?src=hash">#Interview</a> <a href="https://t.co/E3UYf4Cwi2">https://t.co/E3UYf4Cwi2</a> <a href="https://t.co/hNSCirD4JE">pic.twitter.com/hNSCirD4JE</a></p>&mdash; Vivek Ranjan (@bcosynot)
+  <a href="https://twitter.com/bcosynot/status/907613549723348992">September 12, 2017</a></blockquote>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Upload and refactor backlog of example from Crockford's private members article</li>
+    <li>Upload notes/lesson on promises.</li>
+    <li><span class="ltred">Potential Blocks:</span> NOPE! I got the whole day for this</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Thursday Aug 31st, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle"> Back from a hiatus. Ran into some issues with pg.connect not working because of the 7.0 update. Serious problem and unresolved. --Swearing alot these days. Working on Dan Wellman's es6 training & it's excellent.</h3>
@@ -31,7 +53,7 @@
   <ol class="todo">
     <li>Spread Operator in functions and arrays</li>
     <li>defining default parameters in the es6 function signatures</li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> ugh... Time is a bit tight</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
@@ -77,6 +99,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>Mongo begun!🎉</li>
+    <li>SQL review</li>
     <li>refactored wesbos training</li>
   </ol>
   <hr />
