--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -35,11 +35,12 @@
   <ol class="todo">
     <li>Upload and refactor backlog of example from Crockford's private members article</li>
     <li>Upload notes/lesson on promises.</li>
-    <li><span class="ltred">Potential Blocks:</span> NOPE! I got the whole day for this</li>
+    <li><span class="ltred">Potential Blocks:</span> NOPE! I got the whole day for this!</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>One section on promises</li>
+    
   </ol>
   <hr />
 
