--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -15,20 +15,45 @@
 <br />I follower her around in a perfectly non-creepy way, constantly asking for selfies, autographs and her email address.<br />
 --OH! Here she is now!</p>
 <pre class="prettyprint w50 ctr">
-function CelebConstructor(nickName,phone,selfieResponse, email) {
-   this.phone = phone;
-   this.nickName = nickName;
-   this.selfieResponse = selfieResponse;
-   var email = email;
-   this.selfieReq = function(selfieResponse) {
-     console.log(this.email);
-     return this.selfieResponse;
-   }
- }
+function CelebConstructor(nickName,phone) {
+  this.phone = phone;
+  this.nickName = nickName;
+  this.selfieResponse = "Sure!";
+  var email =  "taytay@gmail.com";
+  this.selfieReq = function() {
+    console.log("email is: ", this.email);
+    return this.selfieResponse;
+  }
+}
 </pre>
-<p>Well, she isn't "here", yet... I have to create an instance of her.</p>
-<pre class="prettyprint w40 ctr">
-var taylorSwift = new CelebConstructor</pre>
+
+<p>Well, she isn't "here", yet... I have to create an instance of her, then ask for a selfie.</p>
+<pre class="prettyprint w60 ctr">
+var taylorSwift = new CelebConstructor("Tay-tay", "iPhone X");
+console.log(taylorSwift instanceof CelebConstructor); // true  (...sanity check)
+
+console.log(taylorSwift.selfieReq()) // "sure!"
+</pre>
+<p>I ask for a selfie and she says "sure"!</p>
+<pre class="prettyprint w60 ctr">
+var taylorSwift = new CelebConstructor("Tay-tay", "iPhone X", "Sure!");
+console.log(taylorSwift instanceof CelebConstructor); // true  (...sanity check)
+
+console.log(taylorSwift.selfieReq()) // "Sure!"
+</pre>
+
+<p>Enquiring minds want to know what phone she uses.<br />She's shopping around for an endorsement deal with Samsung so she has her publicist announce the public property of the <code>taylorSwift</code> Object<br />
+This is done using a method built on the prototype.<br />A publicist is placed on the CelebConstructor prototype to receive an opinion parameter as a reason for her choice...and that of all future celebs.</p>
+<pre class="prettyprint w60 ctr">
+CelebConstructor.prototype.whatPhone = function(opinion) {
+   let statement = `${this.nickName} likes the ${this.phone} because ${opinion}`;
+   console.log(statement)
+   return statement;
+ }
+// She then invokes the method...
+taylorSwift.whatPhone("it's fancy!");
+</pre>
+
 
 </div>
 <hr>
